# ItchIoScrapper

./: README.md  cli.py  pyproject.toml
src/cli/data/: scrap_assets.py  scrap_assets_metadata.py  unfold_assets.py
